--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,11 +1,16 @@
 .grid {
     display: grid;
     grid-template-columns: 1fr 9fr;
-    grid-template-areas: 
+    grid-template-areas:
         "he he"
-        "na bod"
-        "na bod"
+        "na na"
+        "bod bod"
         "foo foo";
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 header {
@@ -15,14 +20,38 @@ header {
 }
 
 nav {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
     grid-area: na;
     background-color: olive;
     border: 1px solid black;
 }
 
-.navbar{
+.navbar {
     background-color: rgb(61, 61, 8);
     border: 1px solid black;
+}
+
+.navbar ul {
+  margin: 0;
+  padding: 0;
+}
+
+.navbar li {
+  list-style: none;
+  display: inline-block;
+  font-size: 1.2em;
+}
+
+.navbar li:hover {
+  background-color: #FFFFFF88;
+}
+
+.navbar li a {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 main {
