--- a/design2/css/style.css
+++ b/design2/css/style.css
@@ -17,28 +17,32 @@ a {
 
 header {
     grid-area: he;
-    background-color: rgb(250, 250, 254);
-    padding: 5px;
-    text-align: center;
-    color: #5768a5;
+    background-color: #ffffff;
 }
 
-header p{
-    margin: 0 20vw;
+.title {
+    background-color: #a1afe4;
+    border-radius: 50px;
+    padding: 5px;
+    text-align: center;
+    width: 30%;
+    margin: auto;
 }
+
+/* .title h1 {
+    text-shadow: 2px 2px 2px #161a27;
+} */
 
 aside {
   grid-area: na;
-  background-color: rgb(250, 250, 254);
+  background-color: #ffffff;
 }
 
 nav {
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-}
-
-.navbar {
+  box-shadow: 2px 2px 2px #161a27;
   background-color: #5768a5;
   border-radius: 25px;
   text-align: center;
@@ -75,8 +79,43 @@ nav {
 
 main {
     grid-area: bod;
-    background-color: rgb(250, 250, 254);
+    background-color: #ffffff;
     padding: 2px 5px;
+}
+
+.article-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.article-left {
+  align-items: flex-start;
+}
+
+.article-middle {
+  align-items: center;
+}
+
+.article-right {
+  align-items: flex-end;
+}
+
+.article-prev {
+  width: 40vw;
+  margin: 12px;
+  box-shadow: 6px 6px 2px #2f3650;
+  border: thick double #5768a5;
+  padding: 6px;
+}
+
+.article-prev div{
+  display: inline-block;
+}
+
+.article-image {
+  width: 120px;
+  height: 120px;
+  display: inline-block;
 }
 
 footer {
@@ -85,10 +124,13 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-
-}
-
-@media screen and (max-width: 425px) {
+  .grid {
+    grid-template-areas:
+      "he he"
+      "na na"
+      "bod bod"
+      "foo foo";
+  }
   .navbar li {
     display: block;
   }
@@ -103,5 +145,11 @@ footer {
 
   .navbar-shown {
     display: block;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .article-prev {
+    width: 60vw;
   }
 }
