--- a/design2/css/style.css
+++ b/design2/css/style.css
@@ -25,7 +25,7 @@ header {
     border-radius: 50px;
     padding: 5px;
     text-align: center;
-    width: 30%;
+    width: 30vw;
     margin: auto;
 }
 
@@ -89,15 +89,15 @@ main {
 }
 
 .article-left {
-  align-items: flex-start;
+  align-self: flex-start;
 }
 
 .article-middle {
-  align-items: center;
+  align-self: center;
 }
 
 .article-right {
-  align-items: flex-end;
+  align-self: flex-end;
 }
 
 .article-prev {
@@ -131,6 +131,11 @@ footer {
       "bod bod"
       "foo foo";
   }
+
+  .title {
+      width: 80vw;
+  }
+
   .navbar li {
     display: block;
   }
