--- a/design3/css/style.css
+++ b/design3/css/style.css
@@ -1,14 +1,11 @@
 /*Mobile display*/
+
 .grid {
-  margin: 0;
-  padding: 0;
-  display: grid;
-  grid-template-columns: 1fr 5fr;
-  grid-template-areas:
-    "he he"
-    "na na"
-    "bod bod"
-    "foo foo";
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-areas: "he he" "na na" "bod bod" "foo foo";
 }
 
 .title {
@@ -19,8 +16,8 @@
 }
 
 a {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
 
 header {
@@ -29,56 +26,56 @@ header {
 }
 
 aside {
-  grid-area: na;
-  background-color: #ffffff;
+    grid-area: na;
+    background-color: #ffffff;
 }
 
 nav {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-  box-shadow: 2px 2px 2px #161a27;
-  background-color: #5768a5;
-  border-radius: 0 0 25px 25px;
-  text-align: center;
-  font-size: 1.8em;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
+    box-shadow: 2px 2px 2px #161a27;
+    background-color: #5768a5;
+    border-radius: 0 0 25px 25px;
+    text-align: center;
+    font-size: 1.8em;
 }
 
 .navbar ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar li {
-  list-style: none;
-  display: block;
+    list-style: none;
+    display: block;
 }
 
 .navbar li:hover {
-  background-color: #FFFFFF88;
+    background-color: #FFFFFF88;
 }
 
 .navbar li a {
-  display: block;
-  width: 100%;
-  height: 100%;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .navbar-swap {
-  display: block;
-  text-align: center;
-  width: 100%;
-  background-color: transparent;
-  border: none;
-  font-size: 1.5em;
+    display: block;
+    text-align: center;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    font-size: 1.5em;
 }
 
 .navbar-list {
-  display: none;
+    display: none;
 }
 
 .navbar-shown {
-  display: block;
+    display: block;
 }
 
 main {
@@ -88,64 +85,65 @@ main {
 }
 
 .article-container {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .article-prev {
-  margin: 12px;
-  box-shadow: 6px 6px 2px #2f3650;
-  border: thick double #5768a5;
-  padding: 6px;
+    margin: 12px;
+    box-shadow: 6px 6px 2px #2f3650;
+    border: thick double #5768a5;
+    padding: 6px;
 }
 
-.article-prev div{
-  display: inline-block;
+.article-prev div {
+    display: inline-block;
 }
 
 .article-image {
-  width: 120px;
-  height: 120px;
-  display: inline-block;
+    width: 120px;
+    height: 120px;
+    display: inline-block;
 }
 
 footer {
     grid-area: foo;
     background-color: #5768a5;
+    border-radius: 25px 25px 0 0;
 }
+
 
 /*Large mobile display*/
-@media screen and (max-width: 426px) {
-}
+
+@media screen and (max-width: 426px) {}
+
 
 /*Desktop display*/
+
 @media screen and (min-width: 769px) {
-  .article-left {
-    align-self: flex-start;
-  }
-
-  .article-middle {
-    align-self: center;
-  }
-
-  .article-right {
-    align-self: flex-end;
-  }
-
-  .article-prev {
-    width: 40vw;
-  }
-  .title {
-      border-radius: 50px;
-      width: 40vw;
-  }
-  nav {
-    border-radius: 50px;
-    background-color: #5768a5;
-  }
+    .article-left {
+        align-self: flex-start;
+    }
+    .article-middle {
+        align-self: center;
+    }
+    .article-right {
+        align-self: flex-end;
+    }
+    .article-prev {
+        width: 40vw;
+    }
+    .title {
+        border-radius: 50px;
+        width: 40vw;
+    }
+    nav {
+        border-radius: 50px;
+        background-color: #5768a5;
+    }
 }
+
 
 /*4K desktop display*/
-@media screen and (min-width: 1441px) {
-  
-}
+
+@media screen and (min-width: 1441px) {}
