--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,7 +10,8 @@
 }
 
 .title {
-    background: linear-gradient(to bottom right, #745ce0 0%, #5c79e0 100%);
+    background: linear-gradient(to bottom right, #c35ce0 0%, #5c79e0 100%);
+    color: white;
     padding: 5px;
     text-align: center;
     margin: auto;
