--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,7 +19,6 @@
 
 a {
     text-decoration: none;
-    color: black;
 }
 
 header {
@@ -27,12 +26,8 @@ header {
     background-color: #ffffff;
 }
 
-aside {
-    grid-area: na;
-    background-color: #ffffff;
-}
-
 nav {
+    grid-area: na;
     position: -webkit-sticky;
     position: sticky;
     top: 0px;
@@ -61,6 +56,7 @@ nav {
     display: block;
     width: 100%;
     height: 100%;
+    color: white;
 }
 
 .navbar-swap {
@@ -113,6 +109,7 @@ main {
     text-align: center;
 }
 
+
 /* .article-image {
 width: 120px;
 height: 120px;
@@ -124,39 +121,57 @@ footer {
     background-color: #2a44a1;
     border-radius: 25px 25px 0 0;
     padding: 0 12px;
+    color: white;
 }
 
 
 /*Large mobile display*/
 
-@media screen and (max-width: 426px) {}
-
-
-    /*Desktop display*/
-
-    @media screen and (min-width: 769px) {
-        .article-left {
-            align-self: flex-start;
-        }
-        .article-middle {
-            align-self: center;
-        }
-        .article-right {
-            align-self: flex-end;
-        }
-        .article-prev {
-            width: 40vw;
-        }
-        .title {
-            border-radius: 50px;
-            width: 40vw;
-        }
-        nav {
-            border-radius: 50px;
-        }
+@media screen and (max-width: 426px) {
+    .placeholder {
+        color: black;
     }
+}
 
 
-    /*4K desktop display*/
+/*Desktop display*/
 
-    @media screen and (min-width: 1441px) {}
+@media screen and (min-width: 769px) {
+    .article-left {
+        align-self: flex-start;
+    }
+    .article-middle {
+        align-self: center;
+    }
+    .article-right {
+        align-self: flex-end;
+    }
+    .article-prev {
+        width: 40vw;
+    }
+    nav {
+        border-radius: 0;
+    }
+    .navbar li {
+        list-style: none;
+        display: inline-block;
+    }
+    .navbar-list {
+        display: block;
+    }
+    .navbar-swap {
+        display: none;
+    }
+    footer {
+        border-radius: 0;
+    }
+}
+
+
+/*4K desktop display*/
+
+@media screen and (min-width: 1441px) {
+    .placeholder {
+        color: black;
+    }
+}
