--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,9 +1,11 @@
 /*Mobile display*/
 
+.global {
+    margin: 0;
+}
+
 .grid {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    margin: 0;
-    padding: 0;
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-areas: "he he" "na na" "bod bod" "foo foo";
