--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,7 +14,7 @@ html {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-auto-rows: 150px 50px 1fr 60px;
+    grid-auto-rows: 150px 60px 1fr 60px;
     grid-template-areas: "he he" "na na" "bod bod" "foo foo";
     background-image: linear-gradient(to right bottom, #000000, #131212, #1e1d1e, #2a282a, #353437, #353437, #353437, #353437, #2a282a, #1e1d1e, #131212, #000000);
     background-size: contain;
@@ -45,14 +45,16 @@ nav {
     top: 0px;
     box-shadow: 2px 2px 2px #161a27;
     background-color: #2a44a1;
-    border-radius: 0 0 25px 25px;
-    text-align: center;
+    /* border-radius: 0 0 25px 25px; */
+    /* text-align: center; */
     font-size: 1.8em;
 }
 
 .navbar ul {
     margin: 0;
     padding: 0;
+    background-color: #2a44a1;
+    /* border-radius: 0 0 25px 25px; */
 }
 
 .navbar li {
@@ -64,8 +66,13 @@ nav {
     background-color: #FFFFFF88;
 }
 
-.navbar-swap {
+.navbar li b {
     display: block;
+    margin: auto;
+}
+
+.navbar-swap {
+    display: inline-block;
     text-align: center;
     width: 100%;
     background-color: transparent;
@@ -136,7 +143,7 @@ display: inline-block;
 footer {
     grid-area: foo;
     background-color: #2a44a1;
-    border-radius: 25px 25px 0 0;
+    /* border-radius: 25px 25px 0 0; */
     padding: 0 12px;
     color: white;
 }
@@ -153,12 +160,12 @@ footer {
 
 /*Desktop display*/
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .grid {
         font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
         display: grid;
         grid-template-columns: 1fr 5fr;
-        grid-auto-rows: 100px 30px 1fr 60px;
+        grid-auto-rows: 100px 25px 1fr 60px;
         grid-template-areas: "he he" "na na" "bod bod" "foo foo";
         background-image: linear-gradient(to right bottom, #000000, #131212, #1e1d1e, #2a282a, #353437, #353437, #353437, #353437, #2a282a, #1e1d1e, #131212, #000000);
         background-size: contain;
@@ -182,6 +189,7 @@ footer {
     nav {
         border-radius: 0;
         font-size: 1em;
+        text-align: center;
     }
     .navbar li {
         list-style: none;
