--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,10 +44,14 @@ nav {
     position: sticky;
     top: 0px;
     box-shadow: 2px 2px 2px #161a27;
-    background-color: #2a44a1;
     /* border-radius: 0 0 25px 25px; */
     /* text-align: center; */
     font-size: 1.8em;
+}
+
+.navbar {
+    background-color: #2a44a1;
+    box-shadow: 2px 2px 2px #161a27;
 }
 
 .navbar ul {
