--- a/www/css/style.css
+++ b/www/css/style.css
@@ -119,9 +119,10 @@ main {
     flex-direction: row;
 }
 
-.anchor {
+
+/* .anchor {
     padding-top: 65px;
-}
+} */
 
 .bookmark-container {
     display: none;
